--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,8 @@
     "dayjs": "^1.11.13",
     "firebase": "^11.0.1",
     "next": "15.0.1",
+    "next-pwa": "^5.6.0",
+    "next-seo": "^6.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.53.1",
